objects/PG_Request__c.object
<CustomObject>
    <description>Represents the overall Performance Guarantee Request. There will often be a single record per New Business or Renewal Opportunity, but there could be multiple (e.g. when PGs offered vary greatly by Group/Case number). Created per PRDCRM-50558</description>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PG_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PG_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PG Requests</relationshipLabel>
        <relationshipName>PG_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>TEXT(Account_Name__r.Anthem_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_Claim_Systems__c</fullName>
        <label>Applicable Claim System(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WGS</fullName>
                </value>
                <value>
                    <fullName>WGS (JAA)</fullName>
                </value>
                <value>
                    <fullName>NASCO</fullName>
                </value>
                <value>
                    <fullName>NASCO (JAA)</fullName>
                </value>
                <value>
                    <fullName>CS90</fullName>
                </value>
                <value>
                    <fullName>EAP Stand Alone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Alternative_PG_Sets__c</fullName>
        <label>Approved Alternative PG Sets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mercer Health Advantage (Service Ops, Care Mgmt., Network Discount)</fullName>
                </value>
                <value>
                    <fullName>Mercer Study Group (Service Ops, Medical Mgmt., BH)</fullName>
                </value>
                <value>
                    <fullName>Mercer Marketplace (Service Ops)</fullName>
                </value>
                <value>
                    <fullName>Mercer Total Health, Total You Advantage (Service Ops., Care Mgmt.)</fullName>
                </value>
                <value>
                    <fullName>Buck RightOpt (Service Ops, Network Discount)</fullName>
                </value>
                <value>
                    <fullName>WTW One Exchange w/CCMU (Service Ops, Care Mgmt.)</fullName>
                </value>
                <value>
                    <fullName>WTW OneExchange w/Base Care Management (Service Ops)</fullName>
                </value>
                <value>
                    <fullName>WTW off exchange with CCMU (Care Mgmt.)</fullName>
                </value>
                <value>
                    <fullName>AON Hewitt (FI) Corp Exchange (Service Ops)</fullName>
                </value>
                <value>
                    <fullName>AON Hewitt (ASO) Corp Exchange (Service Ops, Care Mgmt.)</fullName>
                </value>
                <value>
                    <fullName>If Other, please contact Mark Voss for addition)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinical_Model_IHM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinical Model IHM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolled_Employees__c</fullName>
        <formula>If(Account_Name__r.WARP_Medical_Members__c  &lt;&gt; Null, TEXT(Account_Name__r.WARP_Medical_Members__c),  TEXT(Account_Name__r.Eligible_Employees__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is copied from the &apos;WARP Medical Members&apos; field on the Account. If &apos;WARP Medical Members&apos; is null, then &apos;Eligible Employees&apos; on Account is used.</inlineHelpText>
        <label>Enrolled Employees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclusions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exclusions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fully_Insured_ProposalRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only Check If Fully Insured</inlineHelpText>
        <label>Fully Insured Proposal/Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>TEXT(Account_Name__r.Group_Size__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is copied from the &apos;Group Size&apos; field on the Account.</inlineHelpText>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_PG_Metrics_Pending_Action__c</fullName>
        <inlineHelpText>This field displays the number of requested PG Metrics which are not in a final status (i.e. NOT Approved, Denied, Withdrawn). Please continue working the PG Request until this number is zero as all Metrics should be Approved, Denied, or Withdrawn for PG</inlineHelpText>
        <label>Number of PG Metrics Pending Action</label>
        <summaryFilterItems>
            <field>PG_Metric__c.Status__c</field>
            <operation>equals</operation>
            <value>Initiated, Pending SME Review, Pending Legal Review, Approved for Catalog Addition</value>
        </summaryFilterItems>
        <summaryForeignKey>PG_Metric__c.PG_Request_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_PG_Metrics_Requested__c</fullName>
        <inlineHelpText>This field displays the number of requested PG Metrics to be included in the Contract (i.e. all PG Metrics excluding those which are Denied &amp; Withdrawn)</inlineHelpText>
        <label>Number of PG Metrics Requested</label>
        <summaryFilterItems>
            <field>PG_Metric__c.Status__c</field>
            <operation>equals</operation>
            <value>Initiated, Pending SME Review, Approved, Pending Legal Review, Approved for Catalog Addition</value>
        </summaryFilterItems>
        <summaryForeignKey>PG_Metric__c.PG_Request_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PG Requests</relationshipLabel>
        <relationshipName>PG_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>Opportunity_Name__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_BuyUps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other / BuyUps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_PG_Request_Status__c</fullName>
        <label>Overall PG Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Request</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Pending SME Review</fullName>
                </value>
                <value>
                    <fullName>Pending Sales Response</fullName>
                </value>
                <value>
                    <fullName>Pending Management Approval</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Applies_to_Entire_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Performance Guarantees below apply to the entire client regardless of source system, account structure, account group or case number. (if not deselect this box, supply exclusions)</inlineHelpText>
        <label>PG Applies to Entire Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PG_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PG Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_Termination_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PG Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PGs_Agreed_With_Client_Prior_SME_Review__c</fullName>
        <inlineHelpText>Default Is &apos;No&apos;. Only Answer &apos;Yes&apos; If PGs Have Been Agreed Upon With Client Prior To Communicating To SMEs For Review, So That SMEs Are Aware When Reviewing</inlineHelpText>
        <label>PGs Agreed With Client Prior SME Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_President_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To specific PGs, if so said Approvals must be attached at the bottom in the Sales/Account Management Documents attachment section</inlineHelpText>
        <label>Plan President Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Account_Name__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Center_and_Operations_Location__c</fullName>
        <label>Service Center and Operations Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albany, NY</fullName>
                </value>
                <value>
                    <fullName>Alexandra, VA</fullName>
                </value>
                <value>
                    <fullName>Atlanta, GA</fullName>
                </value>
                <value>
                    <fullName>Camarillo, CA</fullName>
                </value>
                <value>
                    <fullName>Cincinnati, OH</fullName>
                </value>
                <value>
                    <fullName>Colorado Springs, CO</fullName>
                </value>
                <value>
                    <fullName>Columbus, GA</fullName>
                </value>
                <value>
                    <fullName>Denver, CO</fullName>
                </value>
                <value>
                    <fullName>Gilbert, MN</fullName>
                </value>
                <value>
                    <fullName>Green Bay, WI</fullName>
                </value>
                <value>
                    <fullName>Indianapolis, IN</fullName>
                </value>
                <value>
                    <fullName>Mason, OH</fullName>
                </value>
                <value>
                    <fullName>Middletown, NY</fullName>
                </value>
                <value>
                    <fullName>Milwaukee, WI</fullName>
                </value>
                <value>
                    <fullName>North Haven, CT</fullName>
                </value>
                <value>
                    <fullName>Plano, TX</fullName>
                </value>
                <value>
                    <fullName>Pomona, CA</fullName>
                </value>
                <value>
                    <fullName>Portland, ME</fullName>
                </value>
                <value>
                    <fullName>Rancho Cordova, CA</fullName>
                </value>
                <value>
                    <fullName>Richmond, VA</fullName>
                </value>
                <value>
                    <fullName>St. Louis, MO</fullName>
                </value>
                <value>
                    <fullName>Woodland Hills, CA</fullName>
                </value>
                <value>
                    <fullName>Worthington, OH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>TEXT(Account_Name__r.Situs_State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THTY_Total_Health_Total_You__c</fullName>
        <defaultValue>false</defaultValue>
        <label>THTY (Total Health Total You)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Underwriter_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PG_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PG Request</label>
    <listViews>
        <fullName>ANA_PG_Requests_All</fullName>
        <columns>NAME</columns>
        <columns>Overall_PG_Request_Status__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Underwriter_Name__c</columns>
        <columns>PG_Effective_Date__c</columns>
        <columns>PG_Termination_Date__c</columns>
        <columns>PG_Applies_to_Entire_Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>National Accounts</value>
        </filters>
        <label>ANA PG Requests - All</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Overall_PG_Request_Status__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Underwriter_Name__c</columns>
        <columns>PG_Effective_Date__c</columns>
        <columns>PG_Termination_Date__c</columns>
        <columns>PG_Applies_to_Entire_Client__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>LG_PG_Requests_All_States</fullName>
        <columns>NAME</columns>
        <columns>Overall_PG_Request_Status__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Underwriter_Name__c</columns>
        <columns>PG_Effective_Date__c</columns>
        <columns>PG_Termination_Date__c</columns>
        <columns>PG_Applies_to_Entire_Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group,Labor and Trust</value>
        </filters>
        <label>LG PG Requests - All States</label>
    </listViews>
    <listViews>
        <fullName>LG_PG_Requests_CA</fullName>
        <columns>NAME</columns>
        <columns>Overall_PG_Request_Status__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Underwriter_Name__c</columns>
        <columns>PG_Effective_Date__c</columns>
        <columns>PG_Termination_Date__c</columns>
        <columns>PG_Applies_to_Entire_Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group,Labor and Trust</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>California</value>
        </filters>
        <label>LG PG Requests - CA</label>
    </listViews>
    <listViews>
        <fullName>LG_PG_Requests_CO</fullName>
        <columns>NAME</columns>
        <columns>Overall_PG_Request_Status__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Underwriter_Name__c</columns>
        <columns>PG_Effective_Date__c</columns>
        <columns>PG_Termination_Date__c</columns>
        <columns>PG_Applies_to_Entire_Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group,Labor and Trust</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Colorado</value>
        </filters>
        <label>LG PG Requests - CO</label>
    </listViews>
    <nameField>
        <displayFormat>PGREQ-{0000}</displayFormat>
        <label>PG Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PG Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PGREQ_VR01_Open_Status_If_Open_Metrics</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(Text(Overall_PG_Request_Status__c)=&apos;Finalized&apos;, Text(Overall_PG_Request_Status__c)=&apos;Closed&apos;),Number_of_PG_Metrics_Pending_Action__c != 0)</errorConditionFormula>
        <errorDisplayField>Overall_PG_Request_Status__c</errorDisplayField>
        <errorMessage>Number of PG Metrics Pending Action must be zero for your chosen &apos;Overall PG Request Status&apos;</errorMessage>
    </validationRules>
</CustomObject>